--- a/data-exploration/other/june-2025-investigation.ipynb
+++ b/data-exploration/other/june-2025-investigation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a90eb7ac-ad70-4617-8bf5-5ebab72e3731",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "82079686-bcfd-4b4a-8963-6f3467e9e96d",
    "metadata": {
     "tags": []
@@ -30,12 +30,14 @@
     "import gzip\n",
     "import os\n",
     "import re\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "d917f8b6-9b46-44a3-a29f-84c1b5494106",
    "metadata": {
     "tags": []
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "2358426a-1c25-4339-957f-f0f243067621",
    "metadata": {
     "tags": []
@@ -260,18 +262,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "3baa9ae0-7933-4749-a25b-799771ae6764",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
    "id": "6e196cdd-cf95-4a66-86ec-df27847e2f39",
    "metadata": {
@@ -305,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "04fb5ef6-4d00-4611-8d04-8208feb4e2c7",
    "metadata": {
     "tags": []
@@ -623,9 +613,231 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b8f7d08-c699-4a94-a915-5d9ce362a23b",
+   "metadata": {},
+   "source": [
+    "### Part 2, back to new unmapped terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "04113a57-2b93-45e2-922b-a8a8fcebcbee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(work_dir, 'new_unmapped_rcvs.txt'), 'r') as f:\n",
+    "    new_unmapped_rcvs = {x.strip() for x in f.readlines()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "94b3b029-943d-4e74-b27a-7104500397fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101398"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_unmapped_rcvs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ce7e4253-7dbf-4584-9986-643019064de4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get trait names, submitter IDs, and submission dates\n",
+    "new_unmapped_traits = Counter()\n",
+    "new_unmapped_submitters = Counter()\n",
+    "new_unmapped_submissions = Counter()  # (id, date) pairs\n",
+    "seen = 0\n",
+    "for clinvar_set in june_dataset.iter_cvs():\n",
+    "    if clinvar_set.rcv.accession in new_unmapped_rcvs:\n",
+    "        seen += 1\n",
+    "        for trait in clinvar_set.rcv.traits_with_valid_names:\n",
+    "            new_unmapped_traits[trait.preferred_or_other_valid_name] += 1\n",
+    "        for submitted_record in clinvar_set.scvs:\n",
+    "            new_unmapped_submitters[submitted_record.submitter_id] += 1\n",
+    "            new_unmapped_submissions[(submitted_record.submitter_id, submitted_record.created_date)] += 1\n",
+    "    # early stopping\n",
+    "    if seen == len(new_unmapped_rcvs):\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c9a9a0ae-865f-4493-a2e3-dff6a763fb91",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('RECLASSIFIED - ADRA2C POLYMORPHISM', 97152),\n",
+       " ('Epilepsy with myoclonic atonic seizures', 662),\n",
+       " ('Autosomal dominant Alport syndrome', 436),\n",
+       " ('Hematuria, benign familial, 2', 436),\n",
+       " ('Alport syndrome 3b, autosomal recessive', 436),\n",
+       " ('Familial colorectal cancer type X', 285),\n",
+       " ('Potassium-aggravated myotonia', 256),\n",
+       " ('Paramyotonia congenita of Von Eulenburg', 256),\n",
+       " ('Hypokalemic periodic paralysis, type 2', 256),\n",
+       " ('Hyperkalemic periodic paralysis', 256)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(new_unmapped_traits.items(), key=lambda x: x[1], reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0cc04894-f376-4d28-a954-75ea280d30b1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Group trait counts together so we can see if gene-related disorder is a significant proportion\n",
+    "new_unmapped_trait_groups = Counter()\n",
+    "for trait, count in new_unmapped_traits.items():\n",
+    "    if trait == 'RECLASSIFIED - ADRA2C POLYMORPHISM':\n",
+    "        new_unmapped_trait_groups[trait] = count\n",
+    "    elif re.match(r'^\\S+-related (disorder|condition)$', trait):\n",
+    "        new_unmapped_trait_groups['gene-related disorder'] += count\n",
+    "    else:\n",
+    "        new_unmapped_trait_groups['other'] += count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "563b8416-61ba-4d47-a70a-0b0ab089dfd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'RECLASSIFIED - ADRA2C POLYMORPHISM': 97152,\n",
+       "         'other': 9463,\n",
+       "         'gene-related disorder': 483})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_unmapped_trait_groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a98f46c9-0e80-4460-a27a-cec73dfba249",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('500031', 77981),\n",
+       " ('26957', 11069),\n",
+       " ('505870', 4549),\n",
+       " ('500110', 2023),\n",
+       " ('500105', 1603),\n",
+       " ('25969', 1187),\n",
+       " ('506152', 989),\n",
+       " ('1012', 771),\n",
+       " ('1019', 347),\n",
+       " ('3', 139)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The submitter we currently filter is 239772, which does not appear here\n",
+    "sorted(new_unmapped_submitters.items(), key=lambda x: x[1], reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "afd03194-fb84-4c3a-8866-ae284788bc91",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('500031', '2025-02-25'), 57007),\n",
+       " (('500031', '2025-02-16'), 19500),\n",
+       " (('505870', '2025-03-22'), 3258),\n",
+       " (('500110', '2025-01-19'), 1995),\n",
+       " (('500105', '2025-01-25'), 1493),\n",
+       " (('505870', '2025-04-20'), 1275),\n",
+       " (('25969', '2025-03-11'), 1166),\n",
+       " (('506152', '2025-04-28'), 989),\n",
+       " (('26957', '2025-03-11'), 772),\n",
+       " (('1012', '2025-01-19'), 751)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# About half the new RCVs come from one submission - not quite as dominant as last time\n",
+    "sorted(new_unmapped_submissions.items(), key=lambda x: x[1], reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66dce1e8-ac43-4f08-92de-80a1565a3cd2",
+   "metadata": {},
+   "source": [
+    "Conclusion here is that the new unmapped terms have a similar root cause, i.e. the new \"reclassified\" synonyms - the gene-related disorder/condition terms are present but not in huge numbers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20187946-0627-4204-87a5-a61abd8044c1",
+   "id": "7b9e5418-314f-4ccd-beb8-2da4b63ab32a",
    "metadata": {},
    "outputs": [],
    "source": []
